--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Logs</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
 </head>
 <body>
     <div class="container">
@@ -30,7 +31,7 @@
                     message: data.map(log => log.message)
                 }
             });
-            Highcharts.DataGrid('#logs-grid', {
+            new Highcharts.DataGrid(document.getElementById('logs-grid'), {
                 dataTable,
                 columns: {
                     time: { title: 'Time' },
