--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Logs</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
 </head>
 <body>
     <div class="container">
@@ -18,19 +19,19 @@
     <script src="js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/datagrid.js"></script>
+    <script src="https://code.highcharts.com/modules/data-grid.js"></script>
     <script>
     fetch('../php_backend/public/logs.php')
         .then(resp => resp.json())
         .then(data => {
-            const dataTable = new Highcharts.DataTable({
+            const dataTable = new DataGrid.DataTable({
                 columns: {
                     time: data.map(log => log.created_at),
                     level: data.map(log => log.level),
                     message: data.map(log => log.message)
                 }
             });
-            Highcharts.DataGrid('#logs-grid', {
+            new DataGrid.DataGrid(document.getElementById('logs-grid'), {
                 dataTable,
                 columns: {
                     time: { title: 'Time' },
