--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monthly Statement</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
 </head>
 <body>
     <div class="container">
@@ -24,7 +25,7 @@
     <script src="js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/datagrid.js"></script>
+    <script src="https://code.highcharts.com/modules/data-grid.js"></script>
 <script>
 const monthSelect = document.getElementById('month');
 const yearSelect = document.getElementById('year');
@@ -79,14 +80,14 @@ form.addEventListener('submit', function(e) {
     fetch('../php_backend/public/transactions.php?month=' + month + '&year=' + year)
         .then(resp => resp.json())
         .then(data => {
-            const dataTable = new Highcharts.DataTable({
+            const dataTable = new DataGrid.DataTable({
                 columns: {
                     date: data.map(tx => tx.date),
                     description: data.map(tx => tx.description),
                     amount: data.map(tx => formatCurrency(tx.amount))
                 }
             });
-            Highcharts.DataGrid('#transactions-grid', {
+            new DataGrid.DataGrid(document.getElementById('transactions-grid'), {
                 dataTable,
                 columns: {
                     date: { title: 'Date' },
