--- a/frontend/report.html
+++ b/frontend/report.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transaction Reports</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
 </head>
 <body>
     <div class="container">
@@ -24,7 +25,7 @@
     <script src="js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/datagrid.js"></script>
+    <script src="https://code.highcharts.com/modules/data-grid.js"></script>
     <script>
     function formatCurrency(value) {
         return '£' + parseFloat(value).toFixed(2);
@@ -42,19 +43,19 @@
         fetch('../php_backend/public/report.php?' + params.toString())
             .then(resp => resp.json())
             .then(data => {
-                const gridContainer = '#results-grid';
+                const gridEl = document.getElementById('results-grid');
                 const chartContainer = document.getElementById('chart');
-                document.querySelector(gridContainer).innerHTML = '';
+                gridEl.innerHTML = '';
                 chartContainer.innerHTML = '';
                 if (Array.isArray(data) && data.length) {
-                    const dataTable = new Highcharts.DataTable({
+                    const dataTable = new DataGrid.DataTable({
                         columns: {
                             date: data.map(tx => tx.date),
                             amount: data.map(tx => formatCurrency(tx.amount)),
                             description: data.map(tx => tx.description)
                         }
                     });
-                    Highcharts.DataGrid(gridContainer, {
+                    new DataGrid.DataGrid(gridEl, {
                         dataTable,
                         columns: {
                             date: { title: 'Date' },
@@ -76,7 +77,7 @@
                         series: [{ name: 'Amount', data: amounts }]
                     });
                 } else {
-                    document.querySelector(gridContainer).innerHTML = 'No transactions found.';
+                    gridEl.innerHTML = 'No transactions found.';
                 }
             });
     });
