--- a/frontend/search.html
+++ b/frontend/search.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Transactions</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
 </head>
 <body>
     <div class="container">
@@ -34,7 +35,7 @@
     <script src="js/menu.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
-<script src="https://code.highcharts.com/modules/datagrid.js"></script>
+    <script src="https://code.highcharts.com/modules/data-grid.js"></script>
     <script>
     function formatCurrency(value) {
         return '£' + parseFloat(value).toFixed(2);
@@ -48,18 +49,17 @@
         fetch('../php_backend/public/search_transactions.php?' + params.toString())
             .then(resp => resp.json())
             .then(data => {
-                const gridContainer = '#results-grid';
-                const gridEl = document.querySelector(gridContainer);
+                const gridEl = document.getElementById('results-grid');
                 gridEl.innerHTML = '';
                 if (data.results && data.results.length) {
-                    const dataTable = new Highcharts.DataTable({
+                    const dataTable = new DataGrid.DataTable({
                         columns: {
                             date: data.results.map(tx => tx.date),
                             description: data.results.map(tx => tx.description),
                             amount: data.results.map(tx => formatCurrency(tx.amount))
                         }
                     });
-                    Highcharts.DataGrid(gridContainer, {
+                    new DataGrid.DataGrid(gridEl, {
                         dataTable,
                         columns: {
                             date: { title: 'Date' },
