--- a/frontend/search.html
+++ b/frontend/search.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Transactions</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://code.highcharts.com/css/datagrid.css">
+    <link rel="stylesheet" href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css">
 </head>
 <body>
     <div class="container">
@@ -34,9 +34,7 @@
         </main>
     </div>
     <script src="js/menu.js"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/data.js"></script>
-    <script src="https://code.highcharts.com/modules/data-grid.js"></script>
+    <script src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
     <script>
     function formatCurrency(value) {
         return '£' + parseFloat(value).toFixed(2);
@@ -53,26 +51,14 @@
                 const gridEl = document.getElementById('results-grid');
                 gridEl.innerHTML = '';
                 if (data.results && data.results.length) {
-                    const dataTable = new DataGrid.DataTable({
-                        columns: {
-                            date: data.results.map(tx => tx.date),
-                            description: data.results.map(tx => tx.description),
-                            amount: data.results.map(tx => formatCurrency(tx.amount))
-                        }
-                    });
-
-                    new DataGrid.DataGrid(gridEl, {
-
-                        dataTable,
-                        columns: {
-                            date: { title: 'Date' },
-                            description: { title: 'Description' },
-                            amount: { title: 'Amount' }
-                        }
-                    });
-                    document.querySelectorAll('#results-grid table tr').forEach(row => {
-                        const cell = row.children[2];
-                        if (cell) cell.classList.add('currency');
+                    new Tabulator(gridEl, {
+                        data: data.results,
+                        layout: 'fitColumns',
+                        columns: [
+                            { title: 'Date', field: 'date' },
+                            { title: 'Description', field: 'description' },
+                            { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
+                        ]
                     });
                 } else {
                     gridEl.innerHTML = 'No transactions found.';
