Include tag, category, and group names in transaction listings

--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -81,6 +81,9 @@ form.addEventListener('submit', function(e) {
                 columns: [
                     { title: 'Date', field: 'date' },
                     { title: 'Description', field: 'description' },
+                    { title: 'Category', field: 'category_name' },
+                    { title: 'Tag', field: 'tag_name' },
+                    { title: 'Group', field: 'group_name' },
                     { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
                 ]
             });
