--- a/frontend/search.html
+++ b/frontend/search.html
@@ -59,6 +59,9 @@
                             { title: 'Date', field: 'date' },
                             { title: 'Description', field: 'description' },
                             { title: 'Memo', field: 'memo' },
+                            { title: 'Category', field: 'category_name' },
+                            { title: 'Tag', field: 'tag_name' },
+                            { title: 'Group', field: 'group_name' },
                             { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
                         ]
                     });
