Add monthly dashboard with summaries

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -4,6 +4,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="upload.html">Upload OFX File</a></li>
     <li><a href="yearly_dashboard.html">Yearly Dashboard</a></li>
+    <li><a href="monthly_dashboard.html">Monthly Dashboard</a></li>
     <li><a href="monthly_statement.html">View Monthly Statement</a></li>
     <li><a href="report.html">Transaction Reports</a></li>
     <li><a href="search.html">Search Transactions</a></li>
